{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 142,
  "lineage": "1fa091f8-68c5-7d7a-f1fc-04d76312b87b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0f2326171384b0dd6",
            "domain": "vpc",
            "id": "eipalloc-00ec1efefcfaa2d6d",
            "instance": "i-0e19fab42ad81eb92",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03e3bf730d2030235",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-7-152-161.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.152.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.NTF",
            "aws_security_group.allow_web",
            "aws_subnet.Subnet1",
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Prod_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cda377a1b884a1bc",
            "arn": "arn:aws:ec2:ap-south-1:656714197577:instance/i-0e19fab42ad81eb92",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e19fab42ad81eb92",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03e3bf730d2030235"
              }
            ],
            "primary_network_interface_id": "eni-03e3bf730d2030235",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.7.152.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cac1439f1afa129e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ee8738f7f821a29",
            "tags": {
              "Name": "Web server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-075709c9e7cc82fcb"
            ]
          },
          "dependencies": [
            "aws_network_interface.NTF"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656714197577:internet-gateway/igw-0bd02fb5d1896d489",
            "id": "igw-0bd02fb5d1896d489",
            "owner_id": "656714197577",
            "vpc_id": "vpc-086d7ce65dadc37aa"
          },
          "dependencies": [
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "NTF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-00284a07241874c69",
                "device_index": 0,
                "instance": "i-0e19fab42ad81eb92"
              }
            ],
            "id": "eni-03e3bf730d2030235",
            "ipv6_address_count": 0,
            "mac_address": "02:82:77:3e:4b:9e",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-075709c9e7cc82fcb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ee8738f7f821a29"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.Subnet1",
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0149c6017d62f740b",
            "owner_id": "656714197577",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd02fb5d1896d489",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd02fb5d1896d489",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod_RT"
            },
            "vpc_id": "vpc-086d7ce65dadc37aa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08719808b0db4f1f1",
            "route_table_id": "rtb-0149c6017d62f740b",
            "subnet_id": "subnet-08ee8738f7f821a29"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Prod_routetable",
            "aws_subnet.Subnet1",
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656714197577:security-group/sg-075709c9e7cc82fcb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075709c9e7cc82fcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "656714197577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-086d7ce65dadc37aa"
          },
          "dependencies": [
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656714197577:subnet/subnet-08ee8738f7f821a29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08ee8738f7f821a29",
            "map_public_ip_on_launch": false,
            "owner_id": "656714197577",
            "tags": {
              "Name": "Prod_Subnet"
            },
            "vpc_id": "vpc-086d7ce65dadc37aa"
          },
          "dependencies": [
            "aws_vpc.Prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656714197577:vpc/vpc-086d7ce65dadc37aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0216ed7aba5d704",
            "default_route_table_id": "rtb-052f8e50fd562eb07",
            "default_security_group_id": "sg-04972af8c77358d03",
            "dhcp_options_id": "dopt-a78b5fcc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-086d7ce65dadc37aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052f8e50fd562eb07",
            "owner_id": "656714197577",
            "tags": {
              "Name": "Prod"
            }
          }
        }
      ]
    }
  ]
}